@@ -1,13 +1,5 @@
 package se.sundsvall.notes.integration.db;
 
-import static java.time.temporal.ChronoUnit.SECONDS;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.within;
-import static org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase.Replace.NONE;
-
-import java.time.OffsetDateTime;
-import java.util.UUID;
-
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
@@ -15,9 +7,16 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.jdbc.Sql;
-
 import se.sundsvall.notes.api.model.FindNotesRequest;
 import se.sundsvall.notes.integration.db.model.NoteEntity;
+
+import java.time.OffsetDateTime;
+import java.util.UUID;
+
+import static java.time.temporal.ChronoUnit.SECONDS;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.within;
+import static org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase.Replace.NONE;
 
 /**
  * Note repository tests.
@@ -33,7 +32,8 @@ import se.sundsvall.notes.integration.db.model.NoteEntity;
 })
 class NoteRepositoryTest {
 
-	private static final String MUNICIPALITY_ID = "municipalityId1";
+	private static final String MUNICIPALITY_ID_1 = "municipalityId1";
+	private static final String MUNICIPALITY_ID_2 = "municipalityId2";
 	private static final String ENTITY_1_ID = "a2f40fc7-7d70-404b-a294-85e4f7eff55e";
 	private static final String ENTITY_1_PARTY_ID = "fbfbd90c-4c47-11ec-81d3-0242ac130003";
 	private static final String ENTITY_2_ID = "2569abe8-eed4-46b6-9502-4cad428f9068";
@@ -60,7 +60,7 @@ class NoteRepositoryTest {
 	@Test
 	void findByPartyId() {
 		final var findNotesRequest = FindNotesRequest.create().withPartyId(ENTITY_1_PARTY_ID);
-		final var page = noteRepository.findAllByParameters(findNotesRequest, PageRequest.of(0, 100));
+		final var page = noteRepository.findAllByParameters(findNotesRequest, PageRequest.of(0, 100), MUNICIPALITY_ID_1);
 
 		final var noteEntities = page.getContent();
 
@@ -68,46 +68,46 @@ class NoteRepositoryTest {
 		assertThat(page.getNumberOfElements()).isEqualTo(1);
 		assertThat(page.getTotalPages()).isEqualTo(1);
 		assertThat(page.getTotalElements()).isEqualTo(1);
-		assertThat(noteEntities.get(0).getId()).isEqualTo(ENTITY_1_ID);
-		assertThat(noteEntities.get(0).getPartyId()).isEqualTo(ENTITY_1_PARTY_ID);
-		assertThat(noteEntities.get(0).getMunicipalityId()).isEqualTo(MUNICIPALITY_ID);
+		assertThat(noteEntities.getFirst().getId()).isEqualTo(ENTITY_1_ID);
+		assertThat(noteEntities.getFirst().getPartyId()).isEqualTo(ENTITY_1_PARTY_ID);
+		assertThat(noteEntities.getFirst().getMunicipalityId()).isEqualTo(MUNICIPALITY_ID_1);
 	}
 
 	@Test
 	void findByPartyIdNotFound() {
-		final var findNotesRequest = FindNotesRequest.create().withPartyId("does-not-exist").withMunicipalityId(MUNICIPALITY_ID);
-		final var page = noteRepository.findAllByParameters(findNotesRequest, PageRequest.of(0, 100));
+		final var findNotesRequest = FindNotesRequest.create().withPartyId("does-not-exist");
+		final var page = noteRepository.findAllByParameters(findNotesRequest, PageRequest.of(0, 100), MUNICIPALITY_ID_1);
 
 		assertThat(page.getContent()).isNotNull().isEmpty();
 	}
 
 	@Test
 	void existsByIdAndMunicipalityId() {
-		final var exists = noteRepository.existsByIdAndMunicipalityId(ENTITY_1_ID, MUNICIPALITY_ID);
+		final var exists = noteRepository.existsByIdAndMunicipalityId(ENTITY_1_ID, MUNICIPALITY_ID_1);
 
 		assertThat(exists).isTrue();
 	}
 
 	@Test
 	void existsByIdAndMunicipalityIdNotFound() {
-		final var exists = noteRepository.existsByIdAndMunicipalityId("does-not-exist", MUNICIPALITY_ID);
+		final var exists = noteRepository.existsByIdAndMunicipalityId("does-not-exist", MUNICIPALITY_ID_1);
 
 		assertThat(exists).isFalse();
 	}
 
 	@Test
 	void findByIdAndMunicipalityId() {
-		final var noteEntity = noteRepository.findByIdAndMunicipalityId(ENTITY_1_ID, MUNICIPALITY_ID);
+		final var noteEntity = noteRepository.findByIdAndMunicipalityId(ENTITY_1_ID, MUNICIPALITY_ID_1);
 
 		assertThat(noteEntity).isNotNull();
 		assertThat(noteEntity.get().getId()).isEqualTo(ENTITY_1_ID);
 		assertThat(noteEntity.get().getPartyId()).isEqualTo(ENTITY_1_PARTY_ID);
-		assertThat(noteEntity.get().getMunicipalityId()).isEqualTo(MUNICIPALITY_ID);
+		assertThat(noteEntity.get().getMunicipalityId()).isEqualTo(MUNICIPALITY_ID_1);
 	}
 
 	@Test
 	void findByIdAndMunicipalityIdNotFound() {
-		final var noteEntity = noteRepository.findByIdAndMunicipalityId("does-not-exist", MUNICIPALITY_ID);
+		final var noteEntity = noteRepository.findByIdAndMunicipalityId("does-not-exist", MUNICIPALITY_ID_1);
 
 		assertThat(noteEntity).isNotPresent();
 	}
@@ -124,7 +124,7 @@ class NoteRepositoryTest {
 			.withCaseType("caseType")
 			.withCaseLink("caseLink")
 			.withExternalCaseId("externalCaseId")
-			.withMunicipalityId(MUNICIPALITY_ID);
+			.withMunicipalityId(MUNICIPALITY_ID_1);
 
 		final var persistedEntity = noteRepository.saveAndFlush(noteEntity);
 
@@ -146,7 +146,7 @@ class NoteRepositoryTest {
 			.withCaseType("caseType")
 			.withCaseLink("caseLink")
 			.withExternalCaseId("externalCaseId")
-			.withMunicipalityId(MUNICIPALITY_ID);
+			.withMunicipalityId(MUNICIPALITY_ID_1);
 
 		final var persistedEntity = noteRepository.saveAndFlush(noteEntity);
 
@@ -168,16 +168,16 @@ class NoteRepositoryTest {
 		assertThat(updatedEntity.getModified()).isCloseTo(OffsetDateTime.now(), within(2, SECONDS));
 		assertThat(updatedEntity.getModifiedBy()).isEqualTo("modifiedBy");
 		assertThat(updatedEntity.getSubject()).isEqualTo("modifiedSubject");
-		assertThat(updatedEntity.getMunicipalityId()).isEqualTo(MUNICIPALITY_ID);
+		assertThat(updatedEntity.getMunicipalityId()).isEqualTo(MUNICIPALITY_ID_1);
 	}
 
 	@Test
-	void delete() {
-		assertThat(noteRepository.findById(ENTITY_2_ID)).isPresent();
+	void deleteByIdAndMunicipalityId() {
+		assertThat(noteRepository.findByIdAndMunicipalityId(ENTITY_2_ID, MUNICIPALITY_ID_2)).isPresent();
 
-		noteRepository.deleteById(ENTITY_2_ID);
+		noteRepository.deleteByIdAndMunicipalityId(ENTITY_2_ID, MUNICIPALITY_ID_2);
 
-		assertThat(noteRepository.findById(ENTITY_2_ID)).isNotPresent();
+		assertThat(noteRepository.findByIdAndMunicipalityId(ENTITY_2_ID, MUNICIPALITY_ID_2)).isNotPresent();
 	}
 
 	private boolean isValidUUID(final String value) {
